force-app/main/default/objects/Job__c/fields/Maximum_Salary__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Salary__c</fullName>
    <label>Maximum Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>