force-app/main/default/objects/Job__c/fields/Minimum_Salary__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Salary__c</fullName>
    <label>Minimum Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>