force-app/main/default/objects/Job__c/fields/Positions__c.field-meta.xml
<CustomField>
    <fullName>Positions__c</fullName>
    <label>Positions</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>