force-app/main/default/objects/Job__c/fields/Remaining_Positions__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Positions__c</fullName>
    <formula>Positions__c -  Filled_Positions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Positions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>