force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Positions__c</columns>
    <columns>Skills__c</columns>
    <columns>Filled_Positions__c</columns>
    <columns>Role__c</columns>
    <columns>Status__c</columns>
    <columns>Experience__c</columns>
    <columns>Minimum_Salary__c</columns>
    <columns>Maximum_Salary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>